# paeon-med

./: .env.example  .gitignore  .vercelignore  BUILD_COMMANDS.txt  DEPLOY_NOW.txt  EVERYTHING_YOU_NEED.txt  FLOATING_CALL_INTEGRATION.md  README_VERCEL.md  SETUP_COMPLETE.md  VERCEL_BUILD_COMMANDS_VISUAL.md  VERCEL_DEPLOYMENT.md  VERCEL_FIX_AND_DEPLOY.md  VERCEL_INDEX.md  VERCEL_MASTER_CHECKLIST.md  VERCEL_QUICK_REFERENCE.md  VERCEL_QUICK_START.md  VERCEL_SETUP_COMPLETE.md  VERCEL_SUMMARY.md  api_handler.py  main.py  package-lock.json  pyproject.toml  readme.md  requirements.txt  vercel-backend.json  vercel.json
Calling agent/: .env.example  .gitignore  README.md  package-lock.json  package.json  run.md  server.js  test-client.html
Calling agent/data/: product-info.txt
Calling agent/lib/: audioUtils.js  callSession.js  googleService.js
Calling agent/tests/: audioUtils.test.js  callSession.test.js  googleService.test.js  run-all.js  server.test.js
FE/: .env.local.example  .env.production.example  .vercelignore  package-lock.json  package.json  tsconfig.json
FE/src/: App.tsx  vite-env.d.ts
api/: index.py
app/core/: audit.py  brand_loader.py  company_loader.py  coverage_enrichment.py  llm_adapter.py  middleware.py  query_understanding.py  schemas.py
app/engines/: guardrails.py  (+2 more)
data/: brands.json  companies.json  documents.json  policies.json
tests/: test_audit.py  test_company_profile.py  test_engine_independence.py  test_gemini_integration.py  test_guardrails.py  test_policy_engine.py  test_profile.py  test_rag_engine.py  test_schemas.py
(+26 files in other folders)
